# wtiirn

./: .gitignore  Cargo.toml  Procfile  README.md  app.json
data/predictions/: ca_dfo_014e8164-76e3-3f03-b6b5-b24475d586fe.json  ca_dfo_01adcc85-5b96-32d1-a59d-194badd49da5.json  ca_dfo_0251f7c4-399a-3090-8a04-a2263d0258dd.json  ca_dfo_02f056ec-9668-30d1-9498-4183b857bd22.json  ca_dfo_02fcb232-2dff-34c6-b252-fa4513257b45.json  ca_dfo_03b8ac5d-d1e1-3ffe-a078-5ac0327f81b6.json  ca_dfo_03bfc67b-2c5c-3834-8d03-e8108a726b08.json  ca_dfo_03c5dcb5-c8c9-3c38-9e2d-8111c066c733.json  ca_dfo_03d31c75-1120-3331-b181-8613aed29abc.json  ca_dfo_03e054d7-6fd8-370e-8471-d91d6b010f29.json  ca_dfo_040306cc-70fd-3942-9325-e62b5ad41482.json  ca_dfo_047bd73e-6dd2-3f72-9ff2-4a45bcbbfb97.json  ca_dfo_049cba8f-0363-3cc7-9e1b-be9325fbbc6d.json  ca_dfo_04e79651-7c6e-3570-8ed5-570882787df5.json  ca_dfo_04e990f0-7802-3d56-b953-8d277e3f45ae.json  ca_dfo_0518ee49-b856-367f-9fed-ff8d16f2d6a4.json  ca_dfo_057b220e-4544-35cb-b8ba-cde7fd6fd2c4.json  ca_dfo_05e7c552-f354-3bf3-8a5d-ec6225855a6e.json  ca_dfo_065b09d1-7225-3f85-8ebc-1dfe5434d08e.json  ca_dfo_06717332-bb58-3006-9acd-cf55f42b88c2.json  ca_dfo_06f61e7c-7252-3b00-87a5-8f7c8d4a860b.json  (+2554 more)
public/: atkinson_predictions.json  getlocation.js  lavaca_predictions.json  style.css
scraping/: convert_noaa.py  noaa_response.xml  point_atkinson_2019.html  port_lavaca_2019.xml  requirements.txt  scrape_tide.py
src/: compute.rs  lavaca_predictions.json  lib.rs  main.rs  model.rs  noaa_api.rs  pages.rs  predictions.json  stations.rs
src/compute/: find.rs  (+1 more)
(+17 files in other folders)
