[package]
name = "wtiirn"
version = "0.1.0"
authors = ["Dorian Scheidt <dorian.scheidt@gmail.com>"]
edition = "2018"

[dependencies]
simple-server = "0.4.0"
log = "0.4"
env_logger = "0.6.1"
chrono = { version = "0.4", features=["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.3.1"
serde_urlencoded = "0.6.1"
itertools = "0.8.0"
uom = { version = "0.23.1", features = ["use_serde"] }
uuid = { version = "0.7.4", features = ["v4", "v5", "serde"] }
http = "0.1.18"

[lib]
name = "wtiirn"
path = "src/lib.rs"

[[bin]]
name = "wtiirn"
path = "src/main.rs"
